@@ -483,7 +483,7 @@ Use 'j' (instead of 'i') as default symbol for the imaginary unit.
 .B limit implicit multiplication, limimpl \fI(on, off*)\fP
 .PP
 .TP 8
-.B parsing mode, parse \fI(0* = adaptive, 1 = implicit first, 2 = conventional)\fP
+.B parsing mode, parse \fI(0* = adaptive, 1 = implicit first, 2 = conventional, 3 = chain, 4 = rpn)\fP
 .PP
 .TP 8
 .B read precision, readprec \fI(0* = off, 1 = always, 2 = when decimals)\fP
